# rust-auth-template

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: ci.yml
docker/: Dockerfile
migrations/: 0001_init.sql  0002_add_token_tables.sql  0003_add_rbac_tables.sql
scripts/: wait-for-db.sh
src/: config.rs  db.rs  errors.rs  mailer.rs  main.rs  schema.rs
src/handlers/: admin.rs  auth.rs  health.rs
src/middleware/: auth.rs  ratelimit.rs
src/models/: email_verification_token.rs  mod.rs  password_reset_token.rs  permission.rs  refresh_token.rs  role.rs  user.rs  user_role.rs
src/services/: auth.rs  token.rs
tests/: test_api.sh
