[package]
name = "rust-auth-template"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
axum = { version = "0.8", features = ["macros"] }
base64ct = "=1.6.0"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
home = "=0.5.11"
jsonwebtoken = "9.3"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "migrate"] }
thiserror = "2.0"
time = "=0.3.36"
tokio = { version = "1.44", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
validator = { version = "0.18", features = ["derive"] }
utoipa = { version = "5", features = ["uuid", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
